--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
     "minimum-stability": "dev",
     "require": {
         "qiniu/php-sdk": "^7.1"
+    },
+    "autoload" : {
+        "psr-4" : {
+            "CocoNing\\Transcoding\\" : "src/"
+        }
     }
 }
